force-app/main/default/objects/Contact_Update_Log__c/Contact_Update_Log__c.object-meta.xml
<CustomObject>
    <label>Contact Update Log</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Contact Update Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Update Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>