force-app/main/default/objects/Contact_Update_Log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Update Log</relationshipLabel>
    <relationshipName>Contact_Update_Log</relationshipName>
    <type>Lookup</type>
</CustomField>