force-app/main/default/objects/Contact_Update_Log__c/fields/New_Phone__c.field-meta.xml
<CustomField>
    <fullName>New_Phone__c</fullName>
    <label>New Phone</label>
    <type>Phone</type>
</CustomField>