force-app/main/default/objects/Contact_Update_Log__c/fields/Old_Phone__c.field-meta.xml
<CustomField>
    <fullName>Old_Phone__c</fullName>
    <label>Old Phone</label>
    <type>Phone</type>
</CustomField>